# KM-Editor

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Directory.Build.props  KM.Editor.slnx  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs_or_wiki.md  feature_request.md  in_game_behavior.md
.github/workflows/: build.yml  desktop-release.yml  validation.yml
apps/desktop/: README.md  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/nsis/: installer-hooks.nsh
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: releases.md
docs/priority-0/: documentation-boundary.md  product-direction.md  safety-policy.md  ux-project-model.md  v1-scope.md
docs/priority-1/: technical-spine.md
docs/priority-2/: framework-stack.md
docs/priority-3/: interaction-state-model.md  priority-4-first-slice.md  project-path-flows.md  workbench-navigation.md  workflow-surface-model.md
docs/priority-7/: performance-baseline.md
docs/priority-9/: feature-coverage-roadmap.md  pknx-feature-parity-plan.md
handoff/: 06_SCARLET_VIOLET.md
scripts/: check-workspace-paths.mjs  run-tauri-rust-tests.ps1  test-budgets.json  test-slice.mjs  test-slice.test.mjs
tests/: README.md  xunit.runner.json
(+896 files in other folders)
