# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "km-editor-desktop"
version = "2.3.1"
description = "KM Editor desktop shell"
authors = []
license = "GPL-3.0-only"
repository = "https://github.com/KotMatrosk1n/KM-Editor"
edition = "2021"
rust-version = "1.88.0"

[lib]
name = "km_editor_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
# Required by tauri::generate_context! macro expansion even though no source file imports it directly.
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
